--- a/APP/app/build.gradle
+++ b/APP/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     //Retrofit 2
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Horizontal picker https://github.com/blazsolar/HorizontalPicker
+    implementation 'com.wefika:horizontal-picker:1.1.1'
 }
