seguir con la APP
lo siguiente a hacer es poder ver tu propia lista, re ez

--- a/APP/app/build.gradle
+++ b/APP/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
 
     //Horizontal picker https://github.com/blazsolar/HorizontalPicker
     implementation 'com.wefika:horizontal-picker:1.1.1'
+
+    //SwipeRefreshLayour - para que salga el icono de recargar
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 }
