--- a/APP/app/src/main/AndroidManifest.xml
+++ b/APP/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         <activity
             android:name="com.example.myvideogamelist.views.actividades.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
