--- a/APP/app/src/main/AndroidManifest.xml
+++ b/APP/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             android:name="com.example.myvideogamelist.views.actividades.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/Theme.MyVideoGameList">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
